--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,20 +14,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
       - name: Login to DockerHub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v4
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Docker Image
-        run: docker build -t myginx:${{ github.sha }} .
-      - name: Push to DockerHub
-        run: |
-          docker tag mynginx:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/myginx:${{ github.sha }}
-          docker push ${{ secrets.DOCKER_USERNAME }}/myginx:${{ github.sha }}
+        run: docker build -t mynginx:${{ github.sha }} .
       - name: Test docker image
         run: |
-          docker run -d -p 8080:80 --name test-nginx ${{ secrets.DOCKER_USERNAME }}/myginx:${{ github.sha }}
+          docker run -d -p 8080:80 --name test-nginx mynginx:${{ github.sha }}
           sleep 5
           curl http://lcoalhost:8080 | grep "Hello from Github Actions"
           docker stop test-nginx
+      - name: Push to DockerHub
+        run: |
+          docker tag mynginx:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/mynginx:${{ github.sha }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/myginx:${{ github.sha }}
           
